Bug 477113 - RTL text-align changes throughout the theme because of bug 299837. r=ehsan
UltraBlame original commit: 69cb1df1cb0f4a47fb7711b274c7b88872932580

--- a/toolkit/themes/pinstripe/help/helpFileLayout.css
+++ b/toolkit/themes/pinstripe/help/helpFileLayout.css
@@ -139,7 +139,7 @@ td, th {
 th {
   background-color: #eee;    
   font-weight: bold;
-  text-align: left;
+  text-align: start;
 }
 
 .noTableBorder,
